<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.5.5</version>
	</parent>	
	
	<groupId>net.acerberus</groupId>
	<artifactId>aquarius</artifactId>
	<packaging>pom</packaging>
	<version>0.1</version>
	<name>Aquarius - Aggregator</name>
 
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<maven.test.skip>true</maven.test.skip>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<mojarra.version>2.3.4</mojarra.version>

		<commons-io.version>2.6</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<lombok.version>1.18.10</lombok.version>
		<javax.inject.version>1</javax.inject.version>
		<jackson-jaxrs-base.version>2.9.8</jackson-jaxrs-base.version>
		<validation-api.version>2.0.1.Final</validation-api.version>
		<javafaker.version>0.17.2</javafaker.version>
		<springfox-swagger.version>2.9.2</springfox-swagger.version>
		<apache-poi.version>4.0.1</apache-poi.version>
		<version.google.guava>22.0</version.google.guava>
		<version.dropbox-core-sdk>3.1.1</version.dropbox-core-sdk>
		<version.commons-text>1.8</version.commons-text>
		<version.javax.inject>1</version.javax.inject>
		<version.lombok>1.18.6</version.lombok>
		<version.javax.validation>2.0.1.Final</version.javax.validation>
		<version.joda-time>2.9.2</version.joda-time>
		
		<version.jackson-jaxrs-base>2.4.2</version.jackson-jaxrs-base>
		<version.xlsx-streamer>2.1.0</version.xlsx-streamer>
		<version.javafaker>0.17.2</version.javafaker>
		<version.tika>1.22</version.tika>
		
		<version.commons-io>2.6</version.commons-io>
		
		<version.joinfaces-dependencies>4.4.2</version.joinfaces-dependencies>
		<version.admin-template>1.1.0</version.admin-template><!-- 1.0.2 -->
		<version.admin-theme>1.1.0</version.admin-theme>
		<version.primefaces>8.0</version.primefaces>
		
		<version.servlet-api>3.1.0</version.servlet-api>
		<version.javax.faces>2.3.3</version.javax.faces>
		<version.javax.faces-api>2.3</version.javax.faces-api>
		<version.omnifaces>1.14.1</version.omnifaces>
		<!-- <version.omnifaces>3.10.1</version.omnifaces> -->
		
		<version.commons-lang3>3.10</version.commons-lang3> 
		<version.commons-text>1.8</version.commons-text>

		<version.spring-core>5.3.4</version.spring-core>
		<version.spring-boot-dependency>2.4.2</version.spring-boot-dependency>
		<version.poi>5.0.0</version.poi>
		<version.postgresql>42.2.23</version.postgresql>
	</properties>
 
	<modules>
		<module>cerberus-assembly-domain</module>
    <module>cerberus-assembly</module>
		<module>cerberus-utility</module>
		<module>cerberus-osx</module>
		<module>cerberus-codec</module>
		<module>cerberus-core</module>
		<module>cerberus-core-eux</module>
		<module>cerberus-communicator</module>
		<module>cerberus-css-domain</module>
		<module>cerberus-css</module>
		<module>cerberus-i18n</module>
		<module>cerberus-aux-domain</module>
		<module>cerberus-aux</module>
		<module>cerberus-dispatcher</module>
		<module>cerberus-dispatcher-api</module>
		<module>cerberus-remote</module>
		<module>cerberus-dmx</module>
		<module>cerberus-aspector</module>
		<module>cerberus-surrogate</module>
		<module>cerberus</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-eclipse-plugin</artifactId>
        <version>2.9</version>
        <configuration>
          <additionalConfig>
            <file>
              <name>.settings/org.eclipse.core.resources.prefs</name>
              <content>
                <![CDATA[eclipse.preferences.version=1${line.separator}encoding/<project>=${project.build.sourceEncoding}${line.separator}]]>
              </content>
            </file>
          </additionalConfig>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>  
  
	<repositories>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
		</pluginRepository>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>   
</project>